alignments correction

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -305,3 +305,12 @@ body{
     }
 
   }
+  /* this is icon section */
+  .iconsclass{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items:center;
+    text-align: center;
+
+  }
